# Traffic_Lights

./: CMakeLists.txt  README.md
inc/: TrafficLight.hpp
src/: BufferHandler.cpp  CMakeLists.txt  TrafficLight.cpp  main.cpp
tests/: CMakeLists.txt  init_tests.cpp  tests.cpp  tests.hpp
